src/test/ui/parser/issue-63135.stderr
error: this file contains an unclosed delimiter
  --> $DIR/issue-63135.rs:3:16
   |
LL | fn i(n{...,f #
   |     - -        ^
   |     | |
   |     | unclosed delimiter
   |     unclosed delimiter

error: this file contains an unclosed delimiter
  --> $DIR/issue-63135.rs:3:16
   |
LL | fn i(n{...,f #
   |     - -        ^
   |     | |
   |     | unclosed delimiter
   |     unclosed delimiter

error: expected field pattern, found `...`
  --> $DIR/issue-63135.rs:3:8
   |
LL | fn i(n{...,f #
   |        ^^^ help: to omit remaining fields, use one fewer `.`: `..`

error: expected `}`, found `,`
  --> $DIR/issue-63135.rs:3:11
   |
LL | fn i(n{...,f #
   |        ---^
   |        |  |
   |        |  expected `}`
   |        `..` must be at the end and cannot have a trailing comma

error: expected `[`, found `}`
  --> $DIR/issue-63135.rs:3:16
   |
LL | fn i(n{...,f #
   |                ^ expected `[`

error: expected one of `:` or `|`, found `)`
  --> $DIR/issue-63135.rs:3:16
   |
LL | fn i(n{...,f #
   |                ^ expected one of `:` or `|`

error: expected `;` or `{`, found `<eof>`
  --> $DIR/issue-63135.rs:3:16
   |
LL | fn i(n{...,f #
   |                ^ expected `;` or `{`

error: aborting due to 7 previous errors

