src/test/ui/parser/issue-63135.rs
// error-pattern: aborting due to 7 previous errors

fn i(n{...,f #
